

# cards in total.


-------------
Release Notes
-------------

- Improved Commander support -
There will no longer be a black rectangle for "Commander effect" in the command zone.
The details previously available by hovering over that rectangle will now appear when hovering over the commander itself.
The dialog for the commander replacement effect will now display the commander's name.


- Auto-pay support for X mana costs -
When prompted to choose a value for X when paying a mana cost, the left button will now as display "Auto" until you manually click a mana source
If you press Auto, you'll be prompted to pick a value for X, with it defaulting to the maximum value you can afford.
If you press OK on that prompt, Forge will use AI logic to automatically pay whatever value for X you chose.


- Auto-targeting support -
When playing spells and abilities with the text "target opponent", if you only have one opponent, you will no longer be asked to choose the opponent to target.
When triggered abilities have only one valid target, that target will now be auto-selected.


- New Commander 2014 and Khans of Tarkir cards -
We have added a branch to our SVN for the new cards that are currently being scripted. These cards are not yet available in this build of forge. Please be patient and they will soon become available.


---------
New Cards
---------




-------------------------------
New Commander 2014 branch Cards
-------------------------------

Ghoulcaller Gisa
Stitcher Geralf
Teferi, Temporal Archmage


--------------------------------
New Khans of Tarkir branch Cards
--------------------------------

Jeskai Elder
Thousand Winds
Zurgo Helmsmasher
Dragon-Style Twins
Herald of Anafenza
Rattleclaw Mystic
Temur Ascendancy
Ainok Bond-Kin
Mardu Skullhunter
Heir of the Wilds
Ivorytusk Fortress
Sagu Mauler


------------
Known Issues
------------

- Continued Work on Conspiracy -