@@ -13,6 +13,10 @@ There will no longer be a black rectangle for "Commander effect" in the command 
 The details previously available by hovering over that rectangle will now appear when hovering over the commander itself.
 The dialog for the commander replacement effect will now display the commander's name.
 
+- Momir Basic variant type -
+Momir Basic is now available as its own variant option on the Constructed screen
+For this format. each player will automatically be given a deck with 12 of each basic land and the Momir Vig avatar
+
 
 - Auto-pay support for X mana costs -
 When prompted to choose a value for X when paying a mana cost, the left button will now as display "Auto" until you manually click a mana source
